update edit warehouse

--- a/WarehouseAPI/src/main/resources/templates/warehouse/index.html
+++ b/WarehouseAPI/src/main/resources/templates/warehouse/index.html
@@ -37,7 +37,7 @@ Click nbfs://nbhost/SystemFileSystem/Templates/Other/html.html to edit this temp
                             </thead>
                             <tbody>
                                 <tr th:each="wh:${warehouses}">
-                                    <td th:text="${wh.wh_code}"></td>
+                                    <td><button th:text="${wh.wh_code}" class="btn btn-primary" th:id="${wh.wh_code}" th:onclick="editWarehouse([[${wh.wh_code}]])"></button></td>
                                     <td th:text="${wh.wh_desc}"></td>
                             <div th:if="${wh.wh_status}">
                                 <td><span class="badge badge-success">Active</span></td>
@@ -87,6 +87,45 @@ Click nbfs://nbhost/SystemFileSystem/Templates/Other/html.html to edit this temp
                     </div>
                 </div>
             </div>
+
+            <!-- Modal -->
+            <div class="modal fade" id="editModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+                <div class="modal-dialog modal-lg">
+                    <div class="modal-content">
+                        <div class="modal-header">
+                            <h5 class="modal-title" id="exampleModalLabel">Edit warehouse</h5>
+                            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                        </div>
+                        <div class="modal-body">
+                            <div class="row">
+                                <input type="hidden" id="wh_editCode" class="form-control" readonly/>
+                                <div class="form-group col-8">
+                                    <label for="wh_desc">Description</label>
+                                    <input id="wh_editDesc" class="form-control"/> 
+                                </div>
+                                <div class="form-group col-4">
+                                    <label class="form-check-label" for="wh_editStatus">Active</label>
+                                    <div class="form-check form-switch">
+                                        <input type="checkbox" id="wh_editStatus" class="form-check-input" style="cursor:pointer; margin-top: 20px"/>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="row">
+                                <div class="form-group col-12">
+                                    <label for="wh_editCmt">Comment</label>
+                                    <textarea class="form-control" id="wh_editCmt">
+                                        
+                                    </textarea>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="modal-footer">
+                            <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                            <button type="button" class="btn btn-primary" id="btnEdit">Save changes</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
             <script th:src="@{/vendor/jquery/jquery.min.js}"></script>
             <script th:src="@{/vendor/datatables/jquery.dataTables.min.js}"></script>
             <script th:src="@{/vendor/datatables/dataTables.bootstrap4.min.js}"></script>
@@ -125,7 +164,59 @@ Click nbfs://nbhost/SystemFileSystem/Templates/Other/html.html to edit this temp
                         console.log(account);
                         $('#exampleModal').modal('hide');
                     });
+                    $('#btnEdit').click(function () {
+                        const account = {
+                            wh_code: $('#wh_editCode').val(),
+                            wh_desc: $('#wh_editDesc').val(),
+                            wh_status: $('#wh_editStatus').prop("checked") ? 1 : 0,
+                            wh_cmt: $('#wh_editCmt').val()
+                        };
+
+                        $.ajax({
+                            url: `api/warehouses/${$('#wh_editCode').val()}`,
+                            type: 'PUT',
+                            contentType: "application/json",
+                            data: JSON.stringify(account),
+                            success: function (res) {
+                                if (res === 200) {
+                                    Swal.fire(
+                                            'Good job!',
+                                            'Edit new Warehouse success',
+                                            'success'
+                                            ).then(function () {
+                                        window.location.reload();
+                                    });
+                                }
+                            }
+                        });
+                        console.log(account);
+
+                    });
                 });
+
+                const editWarehouse = (id) => {
+                    console.log(id);
+                    $.ajax({
+                        type: 'GET',
+                        url: `/api/warehouses/${id}`,
+                        success: function (data) {
+
+                            console.log(data);
+                            $('#wh_editCode').val(data.wh_code);
+                            $('#wh_editDesc').val(data.wh_desc);
+                            if (data.wh_status === true) {
+                                $('#wh_editStatus').prop('checked', true);
+                            } else {
+                                $('#wh_editStatus').prop('checked', false);
+                            }
+                            $('#wh_editCmt').val(data.wh_cmt);
+
+                        }
+                    });
+                    $('#editModal').modal('show');
+                };
+
+
             </script>
         </div>
     </body>
