--- a/WarehouseAPI/src/main/resources/templates/login.html
+++ b/WarehouseAPI/src/main/resources/templates/login.html
@@ -68,7 +68,7 @@ and open the template in the editor.
                                                        placeholder="Enter Username">
                                             </div>
                                             <div class="form-group">
-                                                <input type="password" class="form-control form-control-user"
+                                                <input type="password" name="password" class="form-control form-control-user"
                                                        placeholder="Password">
                                             </div>
                                             <input type="submit" value="Login" class="btn btn-primary btn-user btn-block">
