--- a/WarehouseAPI/src/main/resources/templates/layout/layout.html
+++ b/WarehouseAPI/src/main/resources/templates/layout/layout.html
@@ -52,7 +52,7 @@
                 </li> 
                 <hr class="sidebar-divider my-0">
                 <li class="nav-item">
-                    <a class="nav-link" href="#">
+                    <a class="nav-link" th:href="@{/suppliers}">
                         <i class="fa-solid fa-user-tie"></i>
                         <span>Supplier</span></a>
                 </li>
