--- a/WarehouseAPI/src/main/resources/templates/login.html
+++ b/WarehouseAPI/src/main/resources/templates/login.html
@@ -43,7 +43,7 @@ and open the template in the editor.
 
     </head>
 
-    <body class="bg-gradient-primary">
+    <body class="bg-gradient-primary" style="margin-top: 120px;">
 
         <div class="container">
 
