--- a/WarehouseAPI/src/main/resources/templates/layout/layout.html
+++ b/WarehouseAPI/src/main/resources/templates/layout/layout.html
@@ -57,11 +57,7 @@
                         <span>Incoming List</span></a>
                 </li> 
                 <hr class="sidebar-divider my-0">
-                <li class="nav-item nav-supplier">
-                    <a class="nav-link nav-supplier" th:href="@{/suppliers}">
-                        <i class="fa-solid fa-user-tie"></i>
-                        <span>Supplier</span></a>
-                </li>
+                
                 <li class="nav-item nav-warehouse">
                     <a class="nav-link nav-warehouse" th:href="@{/warehouse}">
                         <i class="fa-solid fa-warehouse"></i>
@@ -71,6 +67,16 @@
                     <a class="nav-link nav-locs" th:href="@{/locs}">
                         <i class="fa-solid fa-house-user"></i>
                         <span>Location</span></a>
+                </li>
+                <li class="nav-item nav-supplier">
+                    <a class="nav-link nav-supplier" th:href="@{/suppliers}">
+                        <i class="fa-solid fa-user-tie"></i>
+                        <span>Supplier</span></a>
+                </li>
+                <li class="nav-item nav-supplier">
+                    <a class="nav-link nav-supplier" th:href="@{/customer}">
+                        <i class="fa-solid fa-person-walking-luggage"></i></i>
+                        <span>Customer</span></a>
                 </li>
                 
 
