--- a/WarehouseAPI/src/main/resources/templates/login.html
+++ b/WarehouseAPI/src/main/resources/templates/login.html
@@ -48,7 +48,7 @@ and open the template in the editor.
         <div class="container">
 
 
-            <div class="row justify-content-center">
+            <div class="row justify-content-center" style="">
 
                 <div class="col-xl-10 col-lg-12 col-md-9">
 
@@ -57,7 +57,7 @@ and open the template in the editor.
 
                             <div class="row">
                                 <div class="col-lg-6 d-none d-lg-block bg-login-image"></div>
-                                <div class="col-lg-6">
+                                <div class="col-lg-6" style="">
                                     <div class="p-5">
                                         <div class="text-center">
                                             <h1 class="h4 text-gray-900 mb-4">Welcome Back!</h1>
