--- a/WarehouseAPI/src/main/resources/templates/layout/layout.html
+++ b/WarehouseAPI/src/main/resources/templates/layout/layout.html
@@ -50,6 +50,11 @@
                         <i class="fas fa-fw fa-tachometer-alt"></i>
                         <span>Dashboard</span></a>
                 </li> 
+                 <li class="nav-item nav-goodsMaster">
+                    <a class="nav-link nav-goodsMaster" th:href="@{/inventory}">
+                        <i class="fa-solid fa-boxes-stacked"></i>
+                        <span>Inventory</span></a>
+                </li> 
                 <hr class="sidebar-divider my-0">
                  <li class="nav-item nav-incoming">
                     <a class="nav-link nav-incoming" th:href="@{/Incoming}">
@@ -78,7 +83,11 @@
                         <i class="fa-solid fa-person-walking-luggage"></i></i>
                         <span>Customer</span></a>
                 </li>
-                
+                 <li class="nav-item nav-goods">
+                    <a class="nav-link nav-supplier" th:href="@{/goods}">
+                       <i class="fa-solid fa-cookie-bite"></i>
+                        <span>Goods Infomation</span></a>
+                </li>
 
                 <!-- Nav Item - Dashboard -->
 
