--- a/WarehouseAPI/src/main/resources/templates/inventory/index.html
+++ b/WarehouseAPI/src/main/resources/templates/inventory/index.html
@@ -44,10 +44,10 @@ Click nbfs://nbhost/SystemFileSystem/Templates/Other/html.html to edit this temp
                                     <td th:text="${item.pt_date_in}">1</td>
                                     <td th:text="${item.pt_qty}">1</td>
                                     <td th:text="${item.accepted_qty}">1</td>
-                            <div th:if="${passed}">
+                            <div th:if="${item.passed}">
                                 <td><span class="badge badge-success">Passed</span></td>
                             </div>
-                            <div th:unless="${passed}">
+                            <div th:unless="${item.passed}">
                                 <td><span class="badge badge-info">Wait for Qc Check</span></td>
                             </div>
                             <td th:text="${item.supplier.sup_name}">1</td>
