Update Create Incoming

--- a/WarehouseAPI/src/main/resources/templates/incoming/index.html
+++ b/WarehouseAPI/src/main/resources/templates/incoming/index.html
@@ -151,7 +151,7 @@ Click nbfs://nbhost/SystemFileSystem/Templates/Other/html.html to edit this temp
 
                     $('#btnAdd').click(function () {
                         const incoming = {
-                            supplier: $('#sup_code :selected').val(),
+                            sup_code: $('#sup_code :selected').val(),
                             vehicle: $('#vehicle').val(),
                             driver: $('#driver').val(),
                             delivery_date: $('#date').val(),
