--- a/WarehouseAPI/src/main/resources/templates/incoming/index.html
+++ b/WarehouseAPI/src/main/resources/templates/incoming/index.html
@@ -38,6 +38,7 @@ Click nbfs://nbhost/SystemFileSystem/Templates/Other/html.html to edit this temp
                                     <th>Driver</th>
                                     <th>Delivery Date</th>
                                     <th>Status</th>
+                                    <th>Action</th>
                                 </tr>
                             </thead>
                             <tbody>
@@ -53,6 +54,7 @@ Click nbfs://nbhost/SystemFileSystem/Templates/Other/html.html to edit this temp
                             <div th:unless="${item.closed}">
                                 <td><span class="badge badge-warning">Pending</span></td>
                             </div> 
+                            <td><a th:href="@{'/Incoming/details/'+${item.ic_id}}" class="btn btn-outline-primary">Details</a></td>
                             </tr>
                             </tbody>
                         </table>
@@ -177,7 +179,7 @@ Click nbfs://nbhost/SystemFileSystem/Templates/Other/html.html to edit this temp
                         });
                     });
                 });
-
+                
             </script>
         </div>
     </body>
