--- a/WarehouseAPI/src/main/resources/templates/inventory/index.html
+++ b/WarehouseAPI/src/main/resources/templates/inventory/index.html
@@ -51,7 +51,7 @@ Click nbfs://nbhost/SystemFileSystem/Templates/Other/html.html to edit this temp
                                 <td><span class="badge badge-info">Wait for Qc Check</span></td>
                             </div>
                             <td th:text="${item.supplier.sup_name}">1</td>
-                            <td <td th:text="${item.location.loc_desc}">1</td>
+                            <td <td th:text="${item.loc_code}">1</td>
                             <!--<td><a th:href="@{/goods/update/{no}(no=${item.goods_no})}">Update</a></td>-->
                             </tr>
                             </tbody>
